@@ -478,9 +478,11 @@ Vegeu <xref linkend="rescue"/>.
 
 </variablelist>
 
-   <sect3 id="preseed-args">
-   <title>Utilitzar els paràmetres de l'arrencada per respondre
-          preguntes</title>
+  </sect2>
+
+  <sect2 id="preseed-args">
+  <title>Utilitzar els paràmetres de l'arrencada per respondre
+         preguntes</title>
 <para>
 
 És possible establir un valor en l'indicador de l'arrencada per a
@@ -577,10 +579,10 @@ des de la llista de tasques interactiva, com per exemple
 
 </variablelist>
 
-   </sect3>
+  </sect2>
 
-   <sect3 id="module-parms">
-   <title>Pas de paràmetres a mòduls del nucli</title>
+  <sect2 id="module-parms">
+  <title>Pas de paràmetres a mòduls del nucli</title>
 <para>
 
 Si els controladors estan compilats al nucli, és possible passar
@@ -621,10 +623,10 @@ de passar:
 </screen></informalexample>
 
 </para>
-   </sect3>
+  </sect2>
 
-   <sect3 id="module-blacklist">
-   <title>Afegir mòduls del nucli a la llista negra</title>
+  <sect2 id="module-blacklist">
+  <title>Afegir mòduls del nucli a la llista negra</title>
 <para>
 
 De vegades pot ser necessari afegir un mòdul en una llista negra per
@@ -651,6 +653,5 @@ instal·lació en mode expert i desseleccioneu el mòdul de la llista
 que es mostra durant les etapes de detecció de maquinari.
 
 </para>
-   </sect3>
   </sect2>
  </sect1>
