@@ -75,7 +75,6 @@ hodnotu <filename>ttya</filename>.
 
 </para>
 
-
   <sect2 id="installer-args"><title>Parametry instalačního programu</title>
 <para>
 
@@ -456,8 +455,10 @@ linkend="rescue"/>.
 
 </variablelist>
 
-   <sect3 id="preseed-args">
-   <title>Použití zaváděcích parametrů pro zodpovězení otázek</title>
+  </sect2>
+
+  <sect2 id="preseed-args">
+  <title>Použití zaváděcích parametrů pro zodpovězení otázek</title>
 <para>
 
 Na stejném místě, kam se zadávají parametry pro jádro nebo instalační
@@ -546,10 +547,10 @@ linkend="pkgsel"/>.
 
 </variablelist>
 
-   </sect3>
+  </sect2>
 
-   <sect3 id="module-parms">
-   <title>Předávání parametrů jaderným modulům</title>
+  <sect2 id="module-parms">
+  <title>Předávání parametrů jaderným modulům</title>
 <para>
 
 Jestliže jsou ovladače zakompilovány přímo do jádra, můžete jim
@@ -586,10 +587,10 @@ aby použila konektor BNC (koaxiální) a IRQ 10, zadali-byste:
 </screen></informalexample>
 
 </para>
-   </sect3>
+  </sect2>
 
-   <sect3 id="module-blacklist">
-   <title>Zapsání jaderných modulů na černou listinu</title>
+  <sect2 id="module-blacklist">
+  <title>Zapsání jaderných modulů na černou listinu</title>
 <para>
 
 Někdy je nutné zanést modul na černou listinu a zabránit tak jádru a
@@ -616,7 +617,6 @@ režimu a odebráním modulu ze seznamu modulů, který se zobrazuje během
 několika fází rozpoznávání hardwaru.
 
 </para>
-   </sect3>
   </sect2>
  </sect1>
 
