@@ -482,8 +482,10 @@ Siehe <xref linkend="rescue"/>.
 
 </variablelist>
 
-   <sect3 id="preseed-args">
-   <title>Boot-Parameter benutzen, um Fragen automatisiert zu beantworten</title>
+  </sect2>
+
+  <sect2 id="preseed-args">
+  <title>Boot-Parameter benutzen, um Fragen automatisiert zu beantworten</title>
 <para>
 
 Mit einigen Ausnahmen kann für jede während der Installation gestellte Frage
@@ -581,10 +583,10 @@ Siehe <xref linkend="pkgsel"/> für zusätzliche Informationen.
 
 </variablelist>
 
-   </sect3>
+  </sect2>
 
-   <sect3 id="module-parms">
-   <title>Parameter für Kernelmodule angeben</title>
+  <sect2 id="module-parms">
+  <title>Parameter für Kernelmodule angeben</title>
 <para>
 
 Wenn Treiber in den Kernel einkompiliert sind, können Sie Parameter für
@@ -625,10 +627,10 @@ verwendet wird, nutzen Sie dies:
 </screen></informalexample>
 
 </para>
-   </sect3>
+  </sect2>
 
-   <sect3 id="module-blacklist">
-   <title>Kernel-Module als gesperrt markieren</title>
+  <sect2 id="module-blacklist">
+  <title>Kernel-Module als gesperrt markieren</title>
 <para>
 
 Manchmal könnte es nötig sein, ein Modul als gesperrt zu markieren, um zu
@@ -656,6 +658,5 @@ im Experten-Modus durchführen und das Modul in den Listen der zu ladenden Modul
 (während der Hardware-Erkennung) deaktivieren.
 
 </para>
-   </sect3>
   </sect2>
  </sect1>
