@@ -453,8 +453,10 @@ performing a normal installation. See <xref linkend="rescue"/>.
 
 </variablelist>
 
-   <sect3 id="preseed-args">
-   <title>Using boot parameters to answer questions</title>
+  </sect2>
+
+  <sect2 id="preseed-args">
+  <title>Using boot parameters to answer questions</title>
 <para>
 
 With some exceptions, a value can be set at the boot prompt for any question
@@ -546,10 +548,10 @@ See <xref linkend="pkgsel"/> for additional information.
 
 </variablelist>
 
-   </sect3>
+  </sect2>
 
-   <sect3 id="module-parms">
-   <title>Passing parameters to kernel modules</title>
+  <sect2 id="module-parms">
+  <title>Passing parameters to kernel modules</title>
 <para>
 
 If drivers are compiled into the kernel, you can pass parameters to them
@@ -587,10 +589,10 @@ to use the BNC (coax) connector and IRQ 10, you would pass:
 </screen></informalexample>
 
 </para>
-   </sect3>
+  </sect2>
 
-   <sect3 id="module-blacklist">
-   <title>Blacklisting kernel modules</title>
+  <sect2 id="module-blacklist">
+  <title>Blacklisting kernel modules</title>
 <para>
 
 Sometimes it may be necessary to blacklist a module to prevent it from
@@ -616,6 +618,5 @@ mode and unselecting the module from the list of modules displayed during
 the hardware detection phases.
 
 </para>
-   </sect3>
   </sect2>
  </sect1>
