@@ -76,7 +76,7 @@ Pour &arch-title;, les interfaces série sont <filename>ttya</filename> ou
 </para>
 
 
- <sect2 id="installer-args"><title>Paramètres pour l'installateur &debian;</title>
+  <sect2 id="installer-args"><title>Paramètres pour l'installateur &debian;</title>
 <para>
 
 Le système d'installation accepte des paramètres d'amorçage<footnote>
@@ -456,8 +456,10 @@ au lieu de faire une installation normale. Voyez <xref linkend="rescue"/>.
 
 </variablelist>
 
-  <sect3 id="preseed-args">
-   <title>Répondre à des questions avec les paramètres d'amorçage</title>
+  </sect2>
+
+  <sect2 id="preseed-args">
+  <title>Répondre à des questions avec les paramètres d'amorçage</title>
 <para>
 
 À quelques exceptions près, toute question posée pendant l'installation peut recevoir
@@ -548,10 +550,10 @@ Voyez <xref linkend="pkgsel"/> pour des précisions.
 
 </variablelist>
 
-   </sect3>
+  </sect2>
 
-<sect3 id="module-parms">
-<title>Passer des paramètres aux modules du noyau</title>
+  <sect2 id="module-parms">
+  <title>Passer des paramètres aux modules du noyau</title>
 <para>
 
 Selon la documentation du noyau Linux, il est possible de passer des paramètres
@@ -585,10 +587,10 @@ connecteur BNC (connexion par câble coaxial) et l'IRQ 10&nbsp;:
 </screen></informalexample>
 
 </para>
-  </sect3>
+  </sect2>
 
-   <sect3 id="module-blacklist">
-   <title>Interdire des modules du noyau</title>
+  <sect2 id="module-blacklist">
+  <title>Interdire des modules du noyau</title>
 <para>
 
 Il est parfois nécessaire de mettre un module dans une liste noire pour
@@ -612,7 +614,6 @@ le module. Vous pouvez l'empêcher en faisant une installation en mode
 <emphasis>expert</emphasis> et en désélectionnant le module dans la liste des
 modules qui est affiché pendant la phase de détection du matériel.
 </para>
-</sect3>
 
-</sect2>
-</sect1>
+  </sect2>
+ </sect1>
