@@ -790,9 +790,11 @@ ripristino anziché effettuare una normale installazione. Si consulti
 
 </variablelist>
 
-   <sect3 id="preseed-args">
-   <!-- <title>Using boot parameters to answer questions</title> -->
-   <title>Uso dei parametri di avvio per rispondere alle domande</title>
+  </sect2>
+
+  <sect2 id="preseed-args">
+  <!-- <title>Using boot parameters to answer questions</title> -->
+  <title>Uso dei parametri di avvio per rispondere alle domande</title>
 <para>
 
 <!--
@@ -944,11 +946,11 @@ ulteriori informazioni si veda <xref linkend="pkgsel"/>.
 </varlistentry>
 
 </variablelist>
-   </sect3>
+  </sect2>
 
-   <sect3 id="module-parms">
-   <!-- <title>Passing parameters to kernel modules</title> -->
-   <title>Passaggio di parametri ai moduli del kernel</title>
+  <sect2 id="module-parms">
+  <!-- <title>Passing parameters to kernel modules</title> -->
+  <title>Passaggio di parametri ai moduli del kernel</title>
 <para>
 
 <!--
@@ -1021,11 +1023,11 @@ BNC (coassiale) e l'IRQ 10 si deve passare:
 </screen></informalexample>
 
 </para>
-   </sect3>
+  </sect2>
 
-   <sect3 id="module-blacklist">
-   <!-- <title>Blacklisting kernel modules</title> -->
-   <title>Moduli del kernel in blacklist</title>
+  <sect2 id="module-blacklist">
+  <!-- <title>Blacklisting kernel modules</title> -->
+  <title>Moduli del kernel in blacklist</title>
 <para>
 
 <!--
@@ -1075,6 +1077,5 @@ in modalità esperto e deselezionando il modulo nell'elenco dei moduli che
 viene mostrato durante le fasi di riconoscimento dell'hardware.
 
 </para>
-   </sect3>
   </sect2>
  </sect1>
