@@ -491,8 +491,10 @@ Defina como <userinput>true</userinput> para entrar no modo <quote>rescue
 
 </variablelist>
 
-   <sect3 id="preseed-args">
-   <title>Usando parâmetros de inicialização para responder questões</title>
+  </sect2>
+
+  <sect2 id="preseed-args">
+  <title>Usando parâmetros de inicialização para responder questões</title>
 <para>
 
 Com algumas exceções, um valor pode ser definido no prompt de inicialização
@@ -568,10 +570,10 @@ Veja <xref linkend="pkgsel"/> para informações adicionais.
 
 </variablelist>
 
-   </sect3>
+  </sect2>
 
-   <sect3 id="module-parms">
-   <title>Passando parâmetros para os módulos do kernel</title>
+  <sect2 id="module-parms">
+  <title>Passando parâmetros para os módulos do kernel</title>
 <para>
 
 Se os drivers são compilados fazendo parte do kernel, você pode passar
@@ -611,10 +613,10 @@ passar:
 </screen></informalexample>
 
 </para>
-   </sect3>
+  </sect2>
 
-   <sect3 id="module-blacklist">
-   <title>Barrando (blacklisting) módulos do kernel</title>
+  <sect2 id="module-blacklist">
+  <title>Barrando (blacklisting) módulos do kernel</title>
 <para>
 
 Algumas vezes pode ser necessário barrar um módulo para prevenir que ele
@@ -640,6 +642,5 @@ expert e desmarcando o módulo da lista de módulos exibida durante as
 fases de detecção de hardware.
 
 </para>
-   </sect3>
   </sect2>
  </sect1>
