@@ -40,6 +40,8 @@ installation-guide (2010xxxx) UNRELEASED; urgency=low
   * Add installation-guide-kfreebsd-{i386,amd64} packages.
   * Reference Debian Installer modules documentation from the preseed section
     (Closes: Bug#603159).
+  * Move boot parameters subsections from inside the debian installer parameters
+    section, to which they don't really belong.
 
   [ Joey Hess ]
   * Update USB stick documentation to reflect isohybird mini.iso files,
